syntax = "proto3";

option java_multiple_files = true;
option java_package = "se.tink.grpc.v1.services";
option java_outer_classname = "Protos";
option go_package = "proto";

import "rpc.proto";
import "google/api/annotations.proto";

service CredentialService {
    rpc ListCredentials (ListCredentialsRequest) returns (ListCredentialsResponse) {}
    rpc CreateCredential (CreateCredentialRequest) returns (CreateCredentialResponse) {}
    rpc DeleteCredential (DeleteCredentialRequest) returns (DeleteCredentialResponse) {}
    rpc UpdateCredential (UpdateCredentialRequest) returns (UpdateCredentialResponse) {}
    rpc RefreshCredentials (RefreshCredentialsRequest) returns (RefreshCredentialsResponse) {}
    rpc SupplementInformation (SupplementInformationRequest) returns (SupplementInformationResponse) {}
    rpc CancelSupplementInformation (CancelSupplementInformationRequest) returns (CancelSupplementInformationResponse) {}
    rpc EnableCredential (EnableCredentialRequest) returns (EnableCredentialResponse) {}
    rpc DisableCredential (DisableCredentialRequest) returns (DisableCredentialResponse) {}
    rpc ThirdPartyCallback (ThirdPartyCallbackRequest) returns (ThirdPartyCallbackResponse) {}
    rpc ManualAuthentication (ManualAuthenticationRequest) returns (ManualAuthenticationResponse) {}
}

service ProviderService {
    rpc ListProviders (ProviderListRequest) returns (ListProvidersResponse) {}
    rpc ListProvidersForMarkets (ProviderListForMarketsRequest) returns (ListProvidersForMarketsResponse) {}
    rpc ListProviderMarkets (ProviderMarketListRequest) returns (ProviderMarketListResponse) {}
    rpc Suggest (ProviderSuggestRequest) returns (ListProvidersResponse) {}
    rpc ListProvidersForPolicy (PolicyListRequest) returns (ListProvidersResponse) {}
}

service UserService {
    rpc CreateAnonymous (CreateAnonymousRequest) returns (CreateAnonymousResponse) {}
    rpc GetProfile (GetProfileRequest) returns (GetProfileResponse) {}
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
    rpc RateApp (RateAppRequest) returns (RateAppResponse) {}
}